--- a/hello.html/hello.html
+++ b/hello.html/hello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
     <body>
-        <h1>welmocome to my website!</h1>
+        <h1 style="color: blueviolet;">welmocome to my website!</h1>
         <h2>Bay</h2>
     Hello, world!
     </body>
